# SKYPRO_COURSEWORK_6

./: README.md  pyproject.toml
skymarket/ads/: filters.py  permissions.py  urls.py
skymarket/ads/models/: __init__.py  ad.py  comment.py
skymarket/ads/serializers/: __init__.py  ad.py  comment.py
skymarket/ads/views/: __init__.py  ad.py  comment.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  serializers.py  urls.py
